[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://Assets/EsqueletoAndando.png" type="Texture" id=2]
[ext_resource path="res://Assets/EsqueletoAtaque.png" type="Texture" id=3]
[ext_resource path="res://Assets/esqueleto morte.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/Sound Design/Passos (Caverna) 4.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.9271, 78.2859 )

[sub_resource type="AnimatedTexture" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 614.125

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 118.182, 77.5498 )

[sub_resource type="Animation" id=5]
resource_name = "attacking-left"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackRight/CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11.5686, 22.3193 ), Vector2( 18.3332, 22.3193 ), Vector2( 23.7604, 18.272 ), Vector2( 27.6618, 14.3707 ), Vector2( 23.2728, 9.24011 ), Vector2( 27.4217, 9.24011 ), Vector2( 28.6821, 9.24011 ), Vector2( 28.6821, 13.6518 ), Vector2( 28.6821, 18.0635 ), Vector2( 23.0099, 24.366 ), Vector2( 16.7075, 27.5172 ), Vector2( 11.0352, 27.5172 ), Vector2( 11.0352, 27.5172 ), Vector2( 11.0352, 27.5172 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackLeft/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -35.9725, 2.05483 ), Vector2( -45.6552, -9.82851 ), Vector2( -51.3768, -22.5921 ), Vector2( -50.9367, -34.0353 ), Vector2( -54.0175, -45.4785 ), Vector2( -49.6163, -63.5236 ), Vector2( -53.5774, -52.9606 ), Vector2( -56.2182, -44.1582 ), Vector2( -55.778, -36.2359 ), Vector2( -54.4577, -22.5921 ), Vector2( -50.4966, -18.1909 ), Vector2( -46.0953, -5.8674 ), Vector2( -38.6132, -0.585907 ), Vector2( -38.6132, -0.585907 ), Vector2( -29.3706, 2.05482 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AttackLeft/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackRight/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackRight/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 39.1631, 4.62005 ), Vector2( 48.9165, -5.13338 ), Vector2( 54.7686, -17.8129 ), Vector2( 57.2069, -30.0046 ), Vector2( 57.2069, -45.6101 ), Vector2( 53.1031, -59.5501 ), Vector2( 55.6241, -50.0964 ), Vector2( 56.8846, -39.3822 ), Vector2( 58.7753, -29.9286 ), Vector2( 58.1451, -21.1051 ), Vector2( 52.4728, -12.2817 ), Vector2( 45.5402, -2.19778 ), Vector2( 39.2377, 2.21393 ), Vector2( 39.2377, 2.21393 ), Vector2( 30.4143, 4.10467 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AttackRight/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11.5686, 22.3193 ), Vector2( 18.3332, 22.3193 ), Vector2( 23.7604, 18.272 ), Vector2( 27.6618, 14.3707 ), Vector2( 23.2728, 9.24011 ), Vector2( 27.4217, 9.24011 ), Vector2( 28.6821, 9.24011 ), Vector2( 28.6821, 13.6518 ), Vector2( 28.6821, 18.0635 ), Vector2( 23.0099, 24.366 ), Vector2( 16.7075, 27.5172 ), Vector2( 11.0352, 27.5172 ), Vector2( 11.0352, 27.5172 ), Vector2( 11.0352, 27.5172 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "dying"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 11.0352, 27.5172 )

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.735077, 7.35089 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 7.95633, 5.78472 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
normal_map = SubResource( 2 )
vframes = 5
hframes = 5

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 3 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( 0.509148, 6.6148 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attacking-left = SubResource( 5 )
anims/attacking-right = SubResource( 6 )
anims/dying = SubResource( 7 )
anims/walking = SubResource( 8 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -24.7085, 6.46422 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )
vframes = 5
hframes = 5

[node name="AttackLeft" type="Area2D" parent="."]
position = Vector2( -1.90735e-06, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackLeft"]
position = Vector2( -29.3706, 2.05482 )
shape = SubResource( 9 )
disabled = true

[node name="AttackRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRight"]
position = Vector2( 30.4143, 4.10467 )
shape = SubResource( 9 )
disabled = true

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 19.4634, 7.54702 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )
vframes = 5
hframes = 5
frame = 5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AttackLeft" to="." method="_on_AttackLeft_body_entered"]
[connection signal="body_entered" from="AttackRight" to="." method="_on_AttackRight_body_entered"]
